# Gemini-SRT-translator-GUI

./: .gitignore  DragDropGUI.py  README.md  gui_config.json  main.py  pyproject.toml  requirements.txt
gemini_srt_translator/: __init__.py  __main__.py  main.py  utils.py
gst_gui/: main.py
gst_gui/gui/: __init__.py  config_manager.py  main_window.py
gst_gui/handlers/: drag_drop_handler.py  translation_handler.py
gst_gui/utils/: cli_runner.py  file_utils.py  subtitle_tracks.py  tmdb_helper.py  video_description_with_splitting.py
gui/: __init__.py  config_manager.py  main_window.py
utils/: cli_runner.py  file_utils.py  tmdb_helper.py
